# ccsp-lm-lite

./: CONTRIBUTING.md  Makefile.am  Makefile.orig  NOTICE  cmpnt_build_custom_pre.mk.orig  cmpnt_build_custom_pre_arm.mk  configure.ac  genautotools.ini
arch/intel_usg/boards/rdkb_arm/: cmpnt_build_custom_pre.mk
arch/intel_usg/boards/rdkb_arm/source/: lm_wrapper_priv.c
config/: LMLite.XML  NetworkDevicesStatus.avsc  NetworkDevicesTraffic.avsc
config-arm/: LMLite.XML  NetworkDevicesStatus.avsc  NetworkDevicesTraffic.avsc
lib/: liblmapi.so.0  liblmapi.so.0.0.0
source/: CcspLMLite  Makefile.am  build.orig  lm_api.c  lm_api.h  lm_api_test.c  lm_main.c  lm_main.h  lm_util.c  lm_util.h  lm_wrapper.c  lm_wrapper.h  lm_wrapper_priv.h  lm_wrapper_priv_arm.c  lm_wrapper_priv_pc.c
source-arm/: lm_wrapper_priv.c
source-pc/: Makefile.am  lm_api.c  lm_api.h  lm_main.c  lm_util.c  lm_wrapper.c  lm_wrapper.h
source-pc/Ssp/: Makefile.am  ssp_action.c  ssp_internal.h  ssp_main.c  ssp_messagebus_interface.c
source-pc/lm/: Makefile.am  ccsp_lmliteLog_wrapper.h  cosa_extassocdevices_dml.c  cosa_hosts_dml.c  cosa_ndstatus_dml.c  cosa_ndtraffic_dml.c  cosa_ndtraffic_dml.h  cosa_reports_internal.c  cosa_reports_internal.h  cosa_xhosts_dml.c  cosa_xhosts_dml.h  extender_associated_devices.c  extender_associated_devices_avropack.c  extender_associated_devices_avropack.h  lm_main.c  lm_main.h  lm_util.c  lm_util.h  lm_wrapper.c  lm_wrapper.h  lm_wrapper_priv.c  lm_wrapper_priv.h  network_devices_status.c  network_devices_status.h  network_devices_status_avropack.c  network_devices_traffic.c  network_devices_traffic.h  network_devices_traffic_avropack.c  plugin_main.c  webpa_interface.c
source/Ssp/: Makefile.am  ssp_action.c  ssp_internal.h  ssp_main.c  ssp_messagebus_interface.c  ssp_messagebus_interface.h
source/lm/: Makefile.am  ccsp_lmliteLog_wrapper.h  cosa_extassocdevices_dml.c  cosa_extassocdevices_dml.h  cosa_hosts_dml.c  cosa_hosts_dml.h  cosa_managementserver_apis.c  cosa_managementserver_apis.h  cosa_managementserver_dml.c  cosa_managementserver_dml.h  cosa_ndstatus_dml.c  cosa_ndstatus_dml.h  cosa_ndstatus_internal.c  cosa_ndstatus_internal.h  cosa_ndtraffic_dml.c  cosa_ndtraffic_dml.h  cosa_reports_internal.c  cosa_reports_internal.h  cosa_wantraffic_api.c  cosa_wantraffic_api.h  cosa_wantraffic_utils.c  cosa_xhosts_dml.c  device_presence_detection.c  device_presence_detection.h  extender_associated_devices.c  extender_associated_devices.h  extender_associated_devices_avropack.c  extender_associated_devices_avropack.h  lm_api.c  lm_api.h  lm_main.c  lm_main.h  lm_util.c  lm_util.h  lm_wrapper.c  lm_wrapper.h  lm_wrapper_priv.c  network_devices_interface.c  network_devices_interface.h  network_devices_status.c  (+17 more)
source/test/: Makefile.am  gtest_main.cpp  lm_api_test.cpp  lmlite_mock.cpp  lmlite_mock.h  network_devices_traffic_test.cpp  run_ut.sh
